# precision_lan_pibit

./: .gitignore  README.md
pibiti_ws/img/: arvore_missao1.dot
pibiti_ws/src/drone_behaviors/: package.xml  setup.cfg  setup.py
pibiti_ws/src/drone_behaviors/drone_behaviors/: behavior_factory.py
pibiti_ws/src/drone_behaviors/drone_behaviors/camera/: calibracao.py  calibration_data.pkl  camera.py  picamera.py
pibiti_ws/src/drone_behaviors/drone_behaviors/commander/: px4_commander.py
pibiti_ws/src/drone_behaviors/drone_behaviors/conditions/: condicoes_voo.py  esta_no_chao.py
pibiti_ws/src/drone_behaviors/drone_behaviors/flight/: arm.py  desarmar.py  iniciar_pouso.py  offboard_mode.py  takeoff.py
pibiti_ws/src/drone_behaviors/drone_behaviors/subtrees/: iniciar_voo.py  pouso.py
pibiti_ws/src/drone_interfaces/: CMakeLists.txt  package.xml
pibiti_ws/src/drone_interfaces/srv/: SetWaypoint.srv
pibiti_ws/src/precision_landing/: package.xml  setup.cfg  setup.py
pibiti_ws/src/precision_landing/precision_landing/: main.py  takeoff_tree.py
pibiti_ws/src/precision_landing/precision_landing/nodos/: achar_local_seguro.py  ajustar_posicao.py  aproxima.py  calibracao_dinamica.py  camera_feed.py  centraliza.py  contornar.py  cor_detectada.py  deteccao.py  distancia_segura.py  img2local.py  registrar.py  rotaciona.py
pibiti_ws/src/precision_landing/precision_landing/sub_arvores/: iniciar_voo.py  missao_principal.py  pouso.py
